# agentrunbook

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: publishing.md  research.md  runbook-reference.md
examples/: github-issue-triage.toml  mcp-echo-server.py  mcp-echo.toml  repo-review.toml  research-brief.toml  support-triage.toml
src/agentrunbook/: __init__.py  cli.py  config.py  engine.py  models.py  providers.py  templating.py  tools.py  tracing.py
tests/: test_config.py  test_engine.py  test_templating.py  test_tools.py
