[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrunbook"
version = "0.1.0"
description = "Run auditable AI agents from readable TOML runbooks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "KingRainIce" }
]
keywords = ["ai", "agents", "llm", "automation", "runbook", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/KingRainIce/agentrunbook"
Issues = "https://github.com/KingRainIce/agentrunbook/issues"

[project.scripts]
agentrunbook = "agentrunbook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
